# lambda-perf

./: .gitignore  README.md  manifest.json  serverless.yaml
.github/: dependabot.yml
.github/workflows/: aws-deploy.yml  aws-s3-uploader.yml
data/: 2023-10-05.json  last.json
docs/: index.html  script.js
docs/css/: custom.css
function-deployer/: app.js
function-invoker/: app.js
result-builder/: app.js
s3-uploader/: app.mjs  package.json
s3-uploader/runtimes/dotnet6/: build.sh
s3-uploader/runtimes/dotnet6/src/: Function.cs  LambdaPerf.csproj  aws-lambda-tools-defaults.json
s3-uploader/runtimes/nodejs18x/: build.sh  index.js  package.json
s3-uploader/runtimes/python311/: index.py
s3-uploader/runtimes/rust_on_provided_al2/: Cargo.toml  build.sh
s3-uploader/runtimes/rust_on_provided_al2/src/: main.rs
