[package]
name = "lambda-perf"
version = "1.0.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.31"
bytes = "1.5"
aws-smithy-http = "0.56"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
